Create background for workleafs that are not markdown type

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -177,3 +177,12 @@ cite {
 }
 
 // MISC
+.workspace-tabs.mod-top-left-space {
+  .workspace-tab-container {
+    .workspace-leaf-content:not([data-type="markdown"]) {
+      .view-content {
+        @extend %notForMarkdownBackgroundImage;
+      }
+    }
+  }
+}
