--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -50,6 +50,8 @@ $material-color-indigo-700: #303f9f;
 $material-color-indigo-800: #283593;
 $material-color-indigo-900: #1a237e;
 
+$material-color-deep-purple-200: #b39ddb;
+
 :root {
   --material-color-red: #f44336;
   --material-color-red-50: #ffebee;
