--- a/src/shared/index.scss
+++ b/src/shared/index.scss
@@ -1,5 +1,5 @@
 @forward "./marionic-colors.scss";
 @forward "./extendme.scss";
 @forward "./mixins.scss";
-
+@forward "./wallpapers/wallpapers.scss";
 $button-border-color: white;
