--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -49,6 +49,8 @@ $material-color-brown-700: #5d4037;
 $material-color-brown-800: #4e342e;
 $material-color-brown-900: #3e2723;
 
+$material-color-deep-purple-200: #b39ddb;
+
 $material-color-purple-700: #7b1fa2;
 $material-color-purple-800: #6a1b9a;
 $material-color-purple-900: #4a148c;
