--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -45,6 +45,10 @@ $material-color-yellow-300: #fff176;
 $material-color-yellow-700: #fbc02d;
 $material-color-yellow-800: #f9a825;
 $material-color-yellow-900: #f57f17;
+$material-color-yellow-a100: #ffff8d;
+$material-color-yellow-a200: #ff0;
+$material-color-yellow-a400: #ffea00;
+$material-color-yellow-a700: #ffd600;
 
 $material-color-indigo-700: #303f9f;
 $material-color-indigo-800: #283593;
