--- a/src/embedded-headers.scss
+++ b/src/embedded-headers.scss
@@ -1,3 +1,4 @@
+@use "./shared/index.scss" as shared;
 
 .markdown-source-view {
 
@@ -29,3 +30,22 @@
   } 
 }
 
+
+.markdown-source-view.mod-cm6 {
+  .cm-contentContainer {
+    @for $i from 2 through shared.$header-levels {
+      .internal-embed.markdown-embed.inline-embed.is-loaded {
+        .markdown-embed-content {
+          .markdown-preview-view.markdown-rendered {
+            h#{$i} {
+              &:before {
+                content: repeat(":", $i - 1) + " ";
+                @include shared.header-indent-position($color: shared.$accentSecondary);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
