--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -11,3 +11,5 @@ $accentAlt: raw-colors.$material-color-brown-900;
 
 $primaryAlt: raw-colors.$material-color-purple-a100;
 // :skull: --secondary: var(--material-color-purple-a100);
+
+$accentSecondary: raw-colors.$material-color-indigo-200;
