--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -11,6 +11,8 @@ $material-color-blue-700: #1976d2;
 $material-color-blue-800: #1565c0;
 $material-color-blue-900: #0d47a1;
 
+$material-color-indigo-200: #9fa8da;
+
 // $material-color-red: #f44336;
 // $material-color-red-50: #ffebee;
 $material-color-red-100: #ffcdd2;
