--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -13,3 +13,4 @@ $primaryAlt: raw-colors.$material-color-purple-a100;
 // :skull: --secondary: var(--material-color-purple-a100);
 
 $accentSecondary: raw-colors.$material-color-indigo-200;
+$bookSource: raw-colors.$material-color-indigo-900;
