--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -12,6 +12,9 @@ $material-color-blue-800: #1565c0;
 $material-color-blue-900: #0d47a1;
 
 $material-color-indigo-200: #9fa8da;
+$material-color-indigo-700: #303f9f;
+$material-color-indigo-800: #283593;
+$material-color-indigo-900: #1a237e;
 
 // $material-color-red: #f44336;
 // $material-color-red-50: #ffebee;
@@ -52,6 +55,10 @@ $material-color-brown-800: #4e342e;
 $material-color-brown-900: #3e2723;
 
 $material-color-deep-purple-200: #b39ddb;
+$material-color-deep-purple-700: #512da8;
+$material-color-deep-purple-800: #4527a0;
+$material-color-deep-purple-900: #311b92;
+
 
 $material-color-purple-700: #7b1fa2;
 $material-color-purple-800: #6a1b9a;
