Update cuz i forgot to name this before i slept.

--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -1,20 +1,21 @@
 @use "./shared/index.scss" as shared;
-@use 'sass:math';
+@use "sass:math";
 
 //  make some extended thing so that both views are reusing styles
 
 %dataview-container {
-  border: 2px solid var(--material-color-deep-orange);
+  // border: 2px solid var(--material-color-deep-orange);
+  border: 2px solid shared.$borderColor;
   border-right-width: 1em;
   background-image: var(--dark-blue-grad);
-  border-radius: .5em .5em;
-  padding-left: .4em;
+  border-radius: 0.5em 0.5em;
+  padding-left: 0.1em;
 }
 
-// # dataview 
+// # dataview
 .markdown-reading-view {
   .markdown-preview-view.markdown-rendered {
-    .markdown-preview-sizer.markdown-preview-section {   
+    .markdown-preview-sizer.markdown-preview-section {
       .block-language-dataviewjs {
         @extend %dataview-container;
       }
@@ -42,7 +43,6 @@
 }
 
 :is(.canvas-wrapper, .markdown-source-view) {
-
   .cm-preview-code-block.cm-embed-block.markdown-rendered {
     .internal-query {
       border: 2px solid shared.$embedBorderColor;
@@ -51,14 +51,13 @@
     }
   }
 
-
   .embedded-backlinks {
     .backlink-pane {
       max-height: 30vmin;
     }
   }
 
-  .markdown-embed  {
+  .markdown-embed {
     .markdown-embed-link[aria-label="Open link"] {
       padding-top: 1em;
       margin-right: 1em;
@@ -66,7 +65,7 @@
     }
   }
 
-  // # OLK 
+  // # OLK
   // hide transcluded headers for olk (omit linkage)
   .internal-embed[alt*="olk"].markdown-embed,
   .internal-embed[alt*="olk"].markdown-embed {
@@ -74,7 +73,8 @@
       display: none;
     }
     /*  ## OLK::Remove Scrollbar */
-    .markdown-embed-title .markdown-preview-view.markdown-rendered.show-indentation-guide.allow-fold-headings.allow-fold-lists {
+    .markdown-embed-title
+      .markdown-preview-view.markdown-rendered.show-indentation-guide.allow-fold-headings.allow-fold-lists {
       overflow: hidden;
     }
     .markdown-preview-sizer.markdown-preview-section {
@@ -121,4 +121,11 @@ span[alt*="nlk"] {
   }
 }
 
-
+.markdown-reading-view {
+  .internal-embed[alt*="nlk"].markdown-embed
+    .markdown-preview-sizer.markdown-preview-section {
+    padding: 0 0 0 0 !important;
+    padding-left: 0px !important;
+    margin: 0;
+  }
+}
