--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -14,3 +14,4 @@ $primaryAlt: raw-colors.$material-color-purple-a100;
 
 $accentSecondary: raw-colors.$material-color-indigo-200;
 $bookSource: raw-colors.$material-color-indigo-900;
+$borderColor: raw-colors.$material-color-deep-orange;
