--- a/src/shared/raw-colors.scss
+++ b/src/shared/raw-colors.scss
@@ -37,6 +37,7 @@ $material-color-orange-700: #f57c00;
 $material-color-orange-800: #ef6c00;
 $material-color-orange-900: #e65100;
 
+$material-color-deep-orange: #ff5722;
 $material-color-deep-orange-700: #e64a19;
 $material-color-deep-orange-800: #d84315;
 $material-color-deep-orange-900: #bf360c;
