--- a/src/material-ui-colors.scss
+++ b/src/material-ui-colors.scss
@@ -55,6 +55,7 @@ $material-color-indigo-800: #283593;
 $material-color-indigo-900: #1a237e;
 
 $material-color-deep-purple-200: #b39ddb;
+$material-color-deep-orange: #ff5722;
 
 :root {
   --material-color-red: #f44336;
