--- a/src/popover.scss
+++ b/src/popover.scss
@@ -1,4 +1,4 @@
-@use "./shared/index.scss" as SHARED;
+@use "./shared/index.scss" as shared;
 /* # API specific Feature To ONLY TAKE API BETWEEN = and --- */
 /* NAME: SELECTED-TRANSCLUSION-PREVIEW CSS SNIPPET */
 
@@ -42,7 +42,7 @@
           }
           li:nth-child(even) {
             > a {
-              color: SHARED.$embedPrimaryLinkColor;
+              color: shared.$embedPrimaryLinkColor;
             }
           }
         }
@@ -59,11 +59,50 @@
     padding: 0;
   }
 }
+
+// .popover.hover-popover
+//   > .markdown-embed
+//   > .markdown-embed-content
+//   > .markdown-preview-view
 .popover.hover-popover {
-  .markdown-embed-content {
-    .markdown-preview-sizer.markdown-preview-section {
-      .markdown-rendered h2 {
-        border: 1px solid blue;
+  & > .markdown-embed {
+    & > .markdown-emebed-content {
+      & > .markdown-preview-view {
+        & > .markdown-preview-section {
+          background: blue;
+        }
+      }
+    }
+  }
+}
+//   @for $i from 2 through shared.$header-levels {
+//     .markdown-embed-content {
+//       .markdown-preview-sizer.markdown-preview-section {
+//         .markdown-rendered h#{i} {
+//           &:before {
+//             content: shared.repeat(":", $i - 1) + " ";
+//             @include shared.header-indent-position();
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+.popover.hover-popover {
+  background-color: shared.$primary;
+  @for $i from 2 through shared.$header-levels {
+    .markdown-embed-content {
+      .markdown-preview-view.markdown-rendered {
+        .markdown-preview-sizer.markdown-preview-section {
+          h#{$i} {
+            background: shared.$primaryAlt;
+            padding: 0.5em 0.2em;
+            &:before {
+              content: shared.repeat(":", $i - 1) + " ";
+              @include shared.header-indent-position();
+            }
+          }
+        }
       }
     }
   }
