--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -12,6 +12,9 @@ $accentAlt: raw-colors.$material-color-brown-900;
 $primaryAlt: raw-colors.$material-color-purple-900;
 // :skull: --secondary: var(--material-color-purple-a100);
 
+$callout: raw-colors.$material-color-green-900;
+$calloutAlt: raw-colors.$material-color-blue-900;
+
 $accentSecondary: raw-colors.$material-color-indigo-200;
 $bookSource: raw-colors.$material-color-indigo-900;
 $borderColor: raw-colors.$material-color-deep-orange;
