--- a/src/onering.scss
+++ b/src/onering.scss
@@ -244,8 +244,8 @@ div[data-type="timer-view"] {
     }
   }
   .timer {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    aspect-ratio: 16 / 9;
     .timer-display {
       height: 100%;
       .status {
