--- a/src/onering.scss
+++ b/src/onering.scss
@@ -210,8 +210,8 @@ span.cm-strong {
 }
 div[data-type="timer-view"] {
   .timer {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    aspect-ratio: 4/3;
     .timer-display {
       padding: unset;
       .status {
@@ -225,7 +225,7 @@ div[data-type="timer-view"] {
       }
       .control {
         h2.timer-text {
-          font-size: clamp(1em, 4vw, 19rem) !important;
+          font-size: clamp(1em, 3.5vw, 19rem) !important;
         }
       }
     }
