Add bg image to sliding window

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -23,6 +23,8 @@
 @import "./experiments/index";
 
 @import "./frontmatter/index.scss";
+@import "./sliding-window/index.scss";
+
 //What does this do again?
 .markdown-rendered {
   tbody {
