Change unresolved links to gray color in breacrumbs matrix view

--- a/src/shared/marionic-colors.scss
+++ b/src/shared/marionic-colors.scss
@@ -18,3 +18,6 @@ $calloutAlt: raw-colors.$material-color-blue-900;
 $accentSecondary: raw-colors.$material-color-indigo-200;
 $bookSource: raw-colors.$material-color-indigo-900;
 $borderColor: raw-colors.$material-color-deep-orange;
+
+// #C6BAAD
+$unresolvedLinkColor: #C6BAAD
