--- a/src/headers.scss
+++ b/src/headers.scss
@@ -1,6 +1,6 @@
 @use "sass:color" as color;
 @use "./material-ui-colors" as MAT_COLORS;
-
+@use "./shared/marionic-colors.scss" as shared;
 // # Global Shared variables
 
 // ## Knobs
@@ -55,17 +55,22 @@ $bar-color: MAT_COLORS.$material-color-blue-900;
 
 /* # H1 styling Source */
 
-// what was this for again?
+// Styling headers and list items that use ##
 /* ## H1 reading view */
 .markdown-reading-view {
   .markdown-preview-sizer.markdown-preview-section {
     h1[data-heading] {
       @include orange-to-right-color();
-      border: 2px solid var(--material-color-brown-900);
+      border: 2px solid MAT_COLORS.$material-color-brown-900;
       color: var(--material-color-brown-50);
       padding: 0.2em 1em;
       border-radius: 0.5em 1.8em 0.3em 0.5em;
     }
+    // ### List item h1s
+    h1[data-heading]:not(:only-child) {
+      background: MAT_COLORS.$material-color-blue-800;
+    }
+    
     h1[data-heading] > a.tag,
     .cm-contentContainer {
       .HyperMD-header.HyperMD-header-1.cm-line {
