--- a/src/embed-blocks.scss
+++ b/src/embed-blocks.scss
@@ -149,9 +149,9 @@
 // ---------- end dataview section ---- ///
 
 /** WORKING EMBED CONTAINER **/
-// TODO what does this do again?
+// embedded content
 .internal-embed.markdown-embed.inline-embed.is-loaded {
-  padding-left: 0 !important;
+  padding-left: 1em !important;
 }
 /** : Tranclusion/Embed sections */
 
